// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal mutation.addProposalsFromCsv should import 1`] = `
Object {
  "addProposalsFromCsv": Object {
    "badLines": Array [
      2,
      4,
    ],
    "duplicates": Array [
      5,
      6,
    ],
    "errorCode": null,
    "importableProposals": 0,
    "importedProposals": Object {
      "edges": Array [
        Object {
          "node": Object {
            "facebookUrl": null,
            "title": "titre de la proposition qui fail bad image url",
            "webPageUrl": null,
          },
        },
      ],
    },
    "mandatoryMissing": Array [
      7,
    ],
  },
}
`;

exports[`Internal mutation.addProposalsFromCsv should not import 1`] = `
Object {
  "addProposalsFromCsv": Object {
    "badLines": Array [
      2,
      4,
    ],
    "duplicates": Array [
      5,
      6,
    ],
    "errorCode": null,
    "importableProposals": 1,
    "importedProposals": Object {
      "edges": Array [],
    },
    "mandatoryMissing": Array [
      7,
    ],
  },
}
`;
